Fix layout issues with garment grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1103,36 +1103,6 @@ a {
 
 /* \\---  Garment Grid  ---/////////////////////// */
 
-.grid-outer-wrapper {
-    display: grid;
-    grid-template-rows: minmax(100px, 1fr) minmax(200px, 2fr) minmax(100px, 1fr) ;
-    grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);
-    /* background-color: #fcfcfc;
-    background-color:rgba(236, 236, 225, 0.808); */
-    place-self: center;
-    place-content: center;
-    margin: 0 auto;
-    width: clamp(400px, 60vw, 1000px);
-    /* border: 1px solid pink; */
-}
-
-.garment-grid {
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 2fr;
-    /* grid-template-columns: minmax(10px, 1fr) minmax(10px, 1fr) minmax(10px, 1fr); */
-    grid-template-rows: minmax(100px, 1fr) minmax(200px, 2fr);
-    grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);
-    grid-gap: .4rem;
-    background-color: #fcfcfc;
-    /* background-color: rgba(238, 237, 234, 0.808);
-    background-color:rgba(236, 236, 225, 0.808); */
-   
-    overflow: hidden;
-    /* width: clamp(400px, 60vw, 600px); */
-}
 
 .garment-info-panel {
     grid-column: 1 / 4;
@@ -1144,6 +1114,7 @@ a {
     align-content: space-around;
     height: auto;
     padding: 0;
+    text-align: center;
     justify-items: center;
 }
 
@@ -1197,3 +1168,148 @@ img {
     top: 0;
     left: 0;
 }
+
+
+
+
+
+/* ------- rebuild ----------- */
+
+/* -------  pattern thumbnail rebuild ------------ */
+
+#downloadwrapper > .row {
+    width: 1fr;
+    padding: 30px 20px 30px 20px;
+    position: absolute;
+    left: 0;
+    top: 153.24px;
+    justify-content: center;
+    display: flex;
+    align-content: center;
+}
+
+.downloadwrapper {
+    display: flex;
+    flex-direction: row;
+    z-index: 110;
+    max-height: 210px;
+    margin: 0 auto;
+    width: calc(100vw - (26px / 2));
+    max-width: 1024px;
+    max-width: 700px;
+}
+
+#downloads {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    width: 1fr;
+    padding: 20px 15px 50px 15px;
+}
+
+.patternThumb:hover img {
+    filter: opacity(55%);
+}
+
+
+.pattern-thumb {
+    display: none;
+    width: 77px;
+    width: auto;
+    height: auto;
+    padding: 4px;
+}
+
+.tile-on {
+    display: flex;
+}
+
+
+
+
+
+.downloads {
+    /* padding: 0 10vw;
+    display: flex;
+    justify-self: center;
+    width: 100%; */
+
+    display: grid;
+    grid-template-rows: minmax(10px, 1fr);
+    grid-template-columns: minmax(10px, 1fr) minmax(10px, 1fr) minmax(10px, 1fr);
+    background-color: #fcfcfc;
+}
+
+.downloadwrapper {
+    display: grid;
+    grid-row: 1;
+    grid-column: 1 / 2;
+    padding-bottom: 400px;
+}
+
+.pattern-thumbs-md-lg {
+    display: grid;
+    grid-template-columns: repeat( 3, 88px);
+    grid-auto-rows: repeat( 3, 100px);
+    width: auto;
+    height:fit-content;
+    place-content: center;
+}
+
+/* --- rebuild -------- */
+
+.grid-outer-wrapper {
+    display: grid;
+    /* grid-template-rows: auto minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr) auto;
+    grid-template-rows: 1fr 1fr 1fr; */
+    grid-template-rows: minmax(10px, 1fr) minmax(20px, 2fr);
+    grid-template-columns: minmax(10px, 1fr) minmax(10px, 1fr) minmax(10px, 1fr);
+    background-color: #fcfcfc;
+}
+
+.garment-grid {
+    grid-column: 1 / 4;
+    grid-row: 1 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
+    grid-template-rows: minmax(10px, 1fr) minmax(20px, 2fr);
+    grid-template-columns: minmax(10px, 1fr) minmax(10px, 1fr) minmax(10px, 1fr);
+    grid-gap: .4rem;
+    overflow: hidden;
+}
+
+
+.downloadwrapper-alt {
+    display: grid;
+    grid-row: 2 / 3;
+    grid-column: 1;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    z-index: 10000;
+    width: auto;
+    height: 50%;
+    align-content: flex-end;
+}
+
+/* .pattern-thumbs-md-lg-alt {
+    grid-template-columns: repeat( 3, 88px);
+    grid-auto-rows: repeat( 3, 100px);
+} */
+
+
+/* @media (max-width:479px) {
+
+    .grid-outer-wrapper {
+        grid-template-columns: 100px 100px 100px;
+        grid-template-rows: 100px 100px 100px;
+        min-width: 30px;
+        place-items: center;
+    }
+
+    .garment-grid {
+        grid-row: 1 / 4;
+        grid-column: 1 / 4;
+        min-width: 30px;
+    }
+} */
